tests/cases/smoke/valid/typed_list.ty
var names: str[] = ["a", "b"]
