tests/cases/smoke/invalid/expr_slice.ty
var items: int[] = [1, 2, 3]
var part = items[1:2]
